Fix padding and spacing

--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 body {
     margin: 0;
-    background-color: violet;
+    background-color: violet !important;
+    height: 100%;
+}
+
+html {
+  height: 100%;
+}
+
+
+.container {
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100%;
 }
